--- a/index.html
+++ b/index.html
@@ -1,16 +1,89 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AppMétéo</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1>aplication meteo</h1>
 
-   
- 
-   
+      <div class="bloc-logo-info">
+        <div class="bloc-logo">
+          <img
+            src="./ressources/jour/04d.svg"
+            alt=""
+            srcset="logo du temps auil fais "
+            class="logo-meteo"
+          />
+        </div>
+        <div class="bloc-info">
+          <p class="temps">couvert</p>
+          <p class="temps">23²</p>
+          <p class="temps">dakar</p>
+        </div>
+      </div>
+      <div class="heur-bloc-prevision">
+        <div class="bloc-h">
+          <p class="heure-mon-prevision"></p>
+          <p class="heure-prevision-valeur"></p>
+        </div>
+        <div class="bloc-h">
+          <p class="heure-mon-prevision"></p>
+          <p class="heure-prevision-valeur"></p>
+        </div>
+        <div class="bloc-h">
+          <p class="heure-mon-prevision"></p>
+          <p class="heure-prevision-valeur"></p>
+        </div>
+        <div class="bloc-h">
+          <p class="heure-mon-prevision"></p>
+          <p class="heure-prevision-valeur"></p>
+        </div>
+        <div class="bloc-h">
+          <p class="heure-mon-prevision"></p>
+          <p class="heure-prevision-valeur"></p>
+        </div>
+        <div class="bloc-h">
+          <p class="heure-mon-prevision"></p>
+          <p class="heure-prevision-valeur"></p>
+        </div>
+        <div class="bloc-h">
+          <p class="heure-mon-prevision"></p>
+          <p class="heure-prevision-valeur"></p>
+        </div>
+        <div class="bloc-h">
+          <p class="heure-mon-prevision"></p>
+          <p class="heure-prevision-valeur"></p>
+        </div>
+      </div>
+      <div class="jour-prevision-bloc">
+        <div class="bloc-j">
+          <p class="jour-pevision-nom"></p>
+          <p class="jour-pevision-temp"></p>
+        </div>
+        <div class="bloc-j">
+          <p class="jour-pevision-nom"></p>
+          <p class="jour-pevision-temp"></p>
+        </div>
+        <div class="bloc-j">
+          <p class="jour-pevision-nom"></p>
+          <p class="jour-pevision-temp"></p>
+        </div>
+        <div class="bloc-j">
+          <p class="jour-pevision-nom"></p>
+          <p class="jour-pevision-temp"></p>
+        </div>
+        <var
+          ><div class="bloc-j">
+            <p class="jour-pevision-nom"></p>
+            <p class="jour-pevision-temp"></p></div
+        ></var>
+      </div>
+    </div>
+
     <script type="module" src="scripts/main.js"></script>
-</body>
+  </body>
 </html>
