recuperation de la localisation et du degret via l api

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
           />
         </div>
         <div class="bloc-info">
-          <p class="temps">couvert</p>
-          <p class="temps">23²</p>
-          <p class="temps">dakar</p>
+          <p class="temps"></p>
+          <p class="temperature"></p>
+          <p class="localisations"></p>
         </div>
       </div>
       <div class="heur-bloc-prevision">
@@ -42,10 +42,7 @@
           <p class="heure-mon-prevision"></p>
           <p class="heure-prevision-valeur"></p>
         </div>
-        <div class="bloc-h">
-          <p class="heure-mon-prevision"></p>
-          <p class="heure-prevision-valeur"></p>
-        </div>
+
         <div class="bloc-h">
           <p class="heure-mon-prevision"></p>
           <p class="heure-prevision-valeur"></p>
@@ -60,6 +57,14 @@
         </div>
       </div>
       <div class="jour-prevision-bloc">
+        <div class="bloc-j">
+          <p class="jour-pevision-nom"></p>
+          <p class="jour-pevision-temp"></p>
+        </div>
+        <div class="bloc-j">
+          <p class="jour-pevision-nom"></p>
+          <p class="jour-pevision-temp"></p>
+        </div>
         <div class="bloc-j">
           <p class="jour-pevision-nom"></p>
           <p class="jour-pevision-temp"></p>
