recuperation de la localisation et du degret via l api

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   </head>
   <body>
     <div class="container">
+      <div class="overlay-icone-chargement">
+        <img
+          src="ressources/chargement/circles.svg"
+          alt="logo chargement"
+          srcset=""
+        />
+      </div>
       <h1>aplication meteo</h1>
 
       <div class="bloc-logo-info">
