recuperation de la localisation et du degret via l api

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="overlay-icone-chargement">
+      <div class="">
         <img
           src="ressources/chargement/circles.svg"
           alt="logo chargement"
